--- a/dvach-browser/Base.lproj/Main.storyboard
+++ b/dvach-browser/Base.lproj/Main.storyboard
@@ -486,13 +486,13 @@
                                     <outlet property="postWebmIcon3" destination="yW8-9Q-Q3f" id="iE5-Zu-Ejv"/>
                                 </connections>
                             </tableViewCell>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="postCell" rowHeight="130" id="BNP-kc-CNb" customClass="DVBPostTableViewCell">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="postCell" rowHeight="73" id="BNP-kc-CNb" customClass="DVBPostTableViewCell">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="BNP-kc-CNb" id="lu6-fg-lI3">
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <textView clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" usesAttributedText="YES" translatesAutoresizingMaskIntoConstraints="NO" id="M3z-Su-Ix2">
-                                            <rect key="frame" x="81" y="8" width="231" height="92"/>
+                                            <rect key="frame" x="81" y="8" width="231" height="30"/>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" relation="greaterThanOrEqual" id="G05-GT-sq8"/>
@@ -523,57 +523,25 @@
                                                 <action selector="touchFirstPicture:" destination="BNP-kc-CNb" eventType="touchUpInside" id="b0f-Lg-s4H"/>
                                             </connections>
                                         </button>
-                                        <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="751" verticalHuggingPriority="751" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MIA-Cl-nhd">
-                                            <rect key="frame" x="259" y="100" width="53" height="30"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="30" id="Nof-yT-3Kf"/>
-                                            </constraints>
-                                            <state key="normal" title="Ответы">
-                                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                            </state>
-                                            <connections>
-                                                <action selector="showAnswers:" destination="3hz-5v-Niv" eventType="touchUpInside" id="UfF-ba-8Ct"/>
-                                            </connections>
-                                        </button>
-                                        <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="751" verticalHuggingPriority="751" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="E2c-nb-XR8">
-                                            <rect key="frame" x="8" y="100" width="69" height="30"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="30" id="MBQ-AI-mUo"/>
-                                            </constraints>
-                                            <state key="normal" title="Действия">
-                                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                            </state>
-                                            <connections>
-                                                <action selector="showPostActions:" destination="3hz-5v-Niv" eventType="touchUpInside" id="9S4-Xe-Sam"/>
-                                            </connections>
-                                        </button>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="E2c-nb-XR8" firstAttribute="top" secondItem="M3z-Su-Ix2" secondAttribute="bottom" id="1tY-1b-awh"/>
-                                        <constraint firstItem="E2c-nb-XR8" firstAttribute="leading" secondItem="lu6-fg-lI3" secondAttribute="leading" constant="8" id="Hwg-C7-Kbl"/>
+                                        <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="jQY-pz-yxx" secondAttribute="bottom" priority="999" id="94Z-xY-7mB"/>
                                         <constraint firstItem="M3z-Su-Ix2" firstAttribute="top" secondItem="lu6-fg-lI3" secondAttribute="top" constant="8" id="JlN-1N-MCJ"/>
                                         <constraint firstItem="jQY-pz-yxx" firstAttribute="leading" secondItem="lu6-fg-lI3" secondAttribute="leading" constant="8" id="K4S-vg-FxB"/>
-                                        <constraint firstItem="E2c-nb-XR8" firstAttribute="top" relation="greaterThanOrEqual" secondItem="jQY-pz-yxx" secondAttribute="bottom" priority="999" id="NQE-s1-bmc"/>
                                         <constraint firstItem="M3z-Su-Ix2" firstAttribute="leading" secondItem="jQY-pz-yxx" secondAttribute="trailing" constant="8" id="PJv-Nf-thQ"/>
                                         <constraint firstItem="jQY-pz-yxx" firstAttribute="width" secondItem="AGQ-tC-pT5" secondAttribute="width" id="QhU-so-RWg"/>
                                         <constraint firstItem="jQY-pz-yxx" firstAttribute="leading" secondItem="AGQ-tC-pT5" secondAttribute="leading" id="SUl-nF-R3z"/>
                                         <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="jQY-pz-yxx" secondAttribute="bottom" priority="999" constant="8" id="UCH-FN-TD4"/>
                                         <constraint firstItem="jQY-pz-yxx" firstAttribute="centerX" secondItem="yH4-O5-Yl8" secondAttribute="centerX" id="YA7-1m-tE3"/>
-                                        <constraint firstItem="MIA-Cl-nhd" firstAttribute="top" secondItem="M3z-Su-Ix2" secondAttribute="bottom" id="cmI-mS-X68"/>
                                         <constraint firstAttribute="trailing" secondItem="M3z-Su-Ix2" secondAttribute="trailing" constant="8" id="eTP-2U-wQ8"/>
-                                        <constraint firstAttribute="bottom" secondItem="MIA-Cl-nhd" secondAttribute="bottom" id="fJL-bP-hcg"/>
-                                        <constraint firstItem="MIA-Cl-nhd" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="lu6-fg-lI3" secondAttribute="leading" constant="100" id="fOI-Fp-MfD"/>
-                                        <constraint firstItem="MIA-Cl-nhd" firstAttribute="centerY" secondItem="E2c-nb-XR8" secondAttribute="centerY" id="gMP-yb-XH5"/>
                                         <constraint firstItem="jQY-pz-yxx" firstAttribute="centerY" secondItem="yH4-O5-Yl8" secondAttribute="centerY" id="k1h-Im-raC"/>
-                                        <constraint firstAttribute="trailing" secondItem="MIA-Cl-nhd" secondAttribute="trailing" constant="8" id="li0-4X-Xcv"/>
                                         <constraint firstItem="jQY-pz-yxx" firstAttribute="top" secondItem="AGQ-tC-pT5" secondAttribute="top" id="nk3-0D-TWn"/>
+                                        <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="M3z-Su-Ix2" secondAttribute="bottom" id="php-SN-Fkf"/>
                                         <constraint firstItem="jQY-pz-yxx" firstAttribute="top" secondItem="lu6-fg-lI3" secondAttribute="top" constant="8" id="z39-5l-9dG"/>
                                         <constraint firstItem="jQY-pz-yxx" firstAttribute="height" secondItem="AGQ-tC-pT5" secondAttribute="height" id="ziT-K5-5fD"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="actionButton" destination="E2c-nb-XR8" id="OL1-Tt-qc2"/>
-                                    <outlet property="answerButton" destination="MIA-Cl-nhd" id="ZKc-Bb-8eM"/>
                                     <outlet property="commentTextView" destination="M3z-Su-Ix2" id="Ure-zX-opp"/>
                                     <outlet property="imageHeightConstraint" destination="OGr-6H-kGh" id="uwZ-CL-OoB"/>
                                     <outlet property="imageLeftConstraint" destination="K4S-vg-FxB" id="05S-Pw-2tT"/>
@@ -581,6 +549,47 @@
                                     <outlet property="postThumb" destination="jQY-pz-yxx" id="4OM-rw-ETE"/>
                                     <outlet property="videoiconHeightContstraint" destination="0Oy-4z-DNy" id="v9C-gH-9Rd"/>
                                     <outlet property="videoiconWidthContstraint" destination="heg-3M-hoz" id="fY4-Mq-cHn"/>
+                                </connections>
+                            </tableViewCell>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="actionsForPostCell" rowHeight="30" id="ExV-Kj-e3l" customClass="DVBActionsForPostTableViewCell">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ExV-Kj-e3l" id="SKe-Es-YgT">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="751" verticalHuggingPriority="751" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6Bl-zo-iuC">
+                                            <rect key="frame" x="259" y="0.0" width="53" height="30"/>
+                                            <state key="normal" title="Ответы">
+                                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                            </state>
+                                            <connections>
+                                                <action selector="showAnswers:" destination="3hz-5v-Niv" eventType="touchUpInside" id="wY1-0v-by2"/>
+                                            </connections>
+                                        </button>
+                                        <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="751" verticalHuggingPriority="751" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O18-H2-BYg">
+                                            <rect key="frame" x="8" y="0.0" width="69" height="30"/>
+                                            <state key="normal" title="Действия">
+                                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                            </state>
+                                            <connections>
+                                                <action selector="showPostActions:" destination="3hz-5v-Niv" eventType="touchUpInside" id="s3A-ba-54n"/>
+                                            </connections>
+                                        </button>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="O18-H2-BYg" firstAttribute="leading" secondItem="SKe-Es-YgT" secondAttribute="leading" constant="8" id="24x-q4-T3H"/>
+                                        <constraint firstItem="O18-H2-BYg" firstAttribute="top" secondItem="SKe-Es-YgT" secondAttribute="top" id="7qL-LF-Oti"/>
+                                        <constraint firstAttribute="trailing" secondItem="6Bl-zo-iuC" secondAttribute="trailing" constant="8" id="TAF-eF-WSa"/>
+                                        <constraint firstAttribute="bottom" secondItem="O18-H2-BYg" secondAttribute="bottom" id="XBr-BU-9AJ"/>
+                                        <constraint firstItem="6Bl-zo-iuC" firstAttribute="top" secondItem="SKe-Es-YgT" secondAttribute="top" id="b6H-DV-7XX"/>
+                                        <constraint firstItem="6Bl-zo-iuC" firstAttribute="height" secondItem="O18-H2-BYg" secondAttribute="height" id="cGO-P8-0Du"/>
+                                        <constraint firstAttribute="bottom" secondItem="6Bl-zo-iuC" secondAttribute="bottom" id="lac-Gt-kIz"/>
+                                        <constraint firstItem="6Bl-zo-iuC" firstAttribute="centerY" secondItem="O18-H2-BYg" secondAttribute="centerY" id="wBx-iw-UlU"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="actionButton" destination="O18-H2-BYg" id="uef-6S-pX2"/>
+                                    <outlet property="answerButton" destination="6Bl-zo-iuC" id="cyO-fS-iR7"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
