--- a/dvach-browser/Base.lproj/Main.storyboard
+++ b/dvach-browser/Base.lproj/Main.storyboard
@@ -854,11 +854,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="550"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ekp-o7-QBh">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ekp-o7-QBh" customClass="DVBCreatePostScrollView">
                                 <rect key="frame" x="0.0" y="64" width="320" height="486"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RLY-YJ-MBR" userLabel="Container For Post Elements" customClass="DVBContainerForPostElements">
-                                        <rect key="frame" x="0.0" y="0.0" width="320" height="706.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="441.5"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mfq-Cv-IWZ" userLabel="Markup Container">
                                                 <rect key="frame" x="28" y="130" width="264" height="30"/>
@@ -948,7 +948,7 @@
                                                             <constraint firstAttribute="height" constant="60" id="hsl-Ol-um8"/>
                                                         </constraints>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="numberPad"/>
+                                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="numberPad" returnKeyType="go"/>
                                                     </textField>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ATw-LV-fb7" userLabel="Update captcha button">
                                                         <rect key="frame" x="0.0" y="0.0" width="200" height="60"/>
@@ -980,7 +980,7 @@
                                                     <constraint firstAttribute="height" constant="30" id="wb2-Fz-rwA"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <textInputTraits key="textInputTraits"/>
+                                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
                                             </textField>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Имя" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cMi-uW-0S6">
                                                 <rect key="frame" x="15" y="285" width="290" height="30"/>
@@ -1048,13 +1048,13 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hgX-62-n6a" customClass="DVBPostPhotoContainerView">
-                                                <rect key="frame" x="91" y="365" width="62" height="61"/>
+                                                <rect key="frame" x="91" y="365" width="61.5" height="61"/>
                                                 <subviews>
                                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XOd-v6-1ld" customClass="DVBPictureToSendPreviewImageView">
-                                                        <rect key="frame" x="0.0" y="0.0" width="62" height="61"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="61.5" height="61"/>
                                                     </imageView>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dXc-Bd-DQN" userLabel="Add photo button container" customClass="DVBAddPhotoIconImageViewContainer">
-                                                        <rect key="frame" x="19" y="20" width="22" height="22"/>
+                                                        <rect key="frame" x="19.5" y="20" width="22" height="22"/>
                                                         <subviews>
                                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AddImage" translatesAutoresizingMaskIntoConstraints="NO" id="nbz-cE-tFY" customClass="DVBAddPhotoIconImageView">
                                                                 <rect key="frame" x="0.0" y="0.0" width="22" height="22"/>
@@ -1070,7 +1070,7 @@
                                                         </constraints>
                                                     </view>
                                                     <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xVa-tw-g8m">
-                                                        <rect key="frame" x="0.0" y="0.0" width="62" height="61"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="61.5" height="61"/>
                                                         <connections>
                                                             <action selector="pickPhotoAction:" destination="Bhq-1W-f9J" eventType="touchUpInside" id="n5y-sr-3U4"/>
                                                         </connections>
@@ -1090,7 +1090,7 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WY1-1O-Tb7" customClass="DVBPostPhotoContainerView">
-                                                <rect key="frame" x="167" y="365" width="61.5" height="61.5"/>
+                                                <rect key="frame" x="167.5" y="365" width="61.5" height="61.5"/>
                                                 <subviews>
                                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nJq-yt-HiK" customClass="DVBPictureToSendPreviewImageView">
                                                         <rect key="frame" x="0.0" y="0.0" width="61.5" height="61.5"/>
@@ -1132,13 +1132,13 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lmU-VB-eLY" customClass="DVBPostPhotoContainerView">
-                                                <rect key="frame" x="244" y="365" width="61" height="61.5"/>
+                                                <rect key="frame" x="244.5" y="365" width="60.5" height="61.5"/>
                                                 <subviews>
                                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6z5-Oj-JM8" customClass="DVBPictureToSendPreviewImageView">
-                                                        <rect key="frame" x="0.0" y="0.0" width="61" height="61.5"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="60.5" height="61.5"/>
                                                     </imageView>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="q4K-gM-aAF" userLabel="Add photo button container" customClass="DVBAddPhotoIconImageViewContainer">
-                                                        <rect key="frame" x="19" y="20" width="22" height="22"/>
+                                                        <rect key="frame" x="18.5" y="20" width="22" height="22"/>
                                                         <subviews>
                                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AddImage" translatesAutoresizingMaskIntoConstraints="NO" id="mxh-fE-7VH" customClass="DVBAddPhotoIconImageView">
                                                                 <rect key="frame" x="0.0" y="0.0" width="22" height="22"/>
@@ -1154,7 +1154,7 @@
                                                         </constraints>
                                                     </view>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="815-m3-Nve">
-                                                        <rect key="frame" x="0.0" y="0.0" width="61" height="61.5"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="60.5" height="61.5"/>
                                                         <connections>
                                                             <action selector="pickPhotoAction:" destination="Bhq-1W-f9J" eventType="touchUpInside" id="DrP-14-EKX"/>
                                                         </connections>
@@ -1201,7 +1201,7 @@
                                             <constraint firstItem="j1y-7G-FSY" firstAttribute="top" secondItem="hgX-62-n6a" secondAttribute="top" id="iUI-ba-fEr"/>
                                             <constraint firstItem="WY1-1O-Tb7" firstAttribute="top" secondItem="j1y-7G-FSY" secondAttribute="top" id="j2E-8U-FC5"/>
                                             <constraint firstItem="lmU-VB-eLY" firstAttribute="leading" secondItem="WY1-1O-Tb7" secondAttribute="trailing" constant="15" id="m5t-z1-MHW"/>
-                                            <constraint firstAttribute="bottom" secondItem="j1y-7G-FSY" secondAttribute="bottom" constant="280" id="oNd-hF-hQ2"/>
+                                            <constraint firstAttribute="bottom" secondItem="j1y-7G-FSY" secondAttribute="bottom" constant="15" id="oNd-hF-hQ2"/>
                                             <constraint firstItem="cMi-uW-0S6" firstAttribute="leading" secondItem="RLY-YJ-MBR" secondAttribute="leading" constant="15" id="q9C-Yl-ltH"/>
                                             <constraint firstItem="WY1-1O-Tb7" firstAttribute="height" secondItem="j1y-7G-FSY" secondAttribute="height" id="qQA-vb-4oj"/>
                                             <constraint firstItem="WY1-1O-Tb7" firstAttribute="leading" secondItem="hgX-62-n6a" secondAttribute="trailing" constant="15" id="sim-6q-npD"/>
@@ -1224,7 +1224,6 @@
                                             <outlet property="captchaUpdateButton" destination="ATw-LV-fb7" id="sa5-gZ-bhQ"/>
                                             <outlet property="captchaValueTextField" destination="1dE-mf-Pvb" id="Dwj-Fe-tAD"/>
                                             <outlet property="commentTextView" destination="yu0-D0-p1U" id="4l7-wo-4pd"/>
-                                            <outlet property="contstraintFromPhotoToBottomEdge" destination="oNd-hF-hQ2" id="963-B9-90k"/>
                                             <outlet property="emailTextField" destination="NaI-O3-J3g" id="cmK-mg-Wdy"/>
                                             <outlet property="fromThemeToCaptchaFieldContainer" destination="tjr-HV-C99" id="8e5-uX-g7i"/>
                                             <outlet property="nameTextField" destination="cMi-uW-0S6" id="wp9-qJ-bcL"/>
